--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "examples"]
-	path = examples
-	url = https://github.com/fortify-id/examples
+[submodule "fortify-id-examples"]
+	path = fortify-id-examples
+	url = https://github.com/fortify-id/fortify-id-examples
